--- a/environments/local.env
+++ b/environments/local.env
@@ -11,8 +11,8 @@ REDIS_HOST=0.0.0.0
 REDIS_PORT=6379
 REDIS_PASSWORD=redispass
 
-AWS_ACCESS_KEY=AKIA2UC3DF2H5YPBMGKH
-AWS_SECRET_ACCESS_KEY=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
+AWS_ACCESS_KEY=access
+AWS_SECRET_ACCESS_KEY=secret
 AWS_S3_OBJECT_ACL=public-read
 AWS_S3_BUCKET_PATH=http://localhost:7000/june-2023-nestjs
 AWS_S3_BUCKET_NAME=my-nestjs-project
