add jwt-access/refresh guards add current-user.decorator.ts and skip-auth.decorator.ts add signIn, logout, refresh methods to auth.service.ts add checkToken, saveTokens, deleteTokens, setExpireIn methods to token.service.ts add super-user.seed.service.ts

--- a/environments/local.env
+++ b/environments/local.env
@@ -23,3 +23,6 @@ AUTH_ACCESS_TOKEN_SECRET=access_secret
 AUTH_ACCESS_TOKEN_EXPIRATION=36000
 AUTH_REFRESH_TOKEN_SECRET=refresh_secret
 AUTH_REFRESH_TOKEN_EXPIRATION=86400
+
+SUPER_USER_EMAIL = admin@gmail.com
+SUPER_USER_PASSWORD = best!&?passwordof123
