add advertisement functionality

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "create:local:bucket": "ts-node ./src/scripts/create-local-bucket.ts",
     "start:docker:local": "docker compose --env-file ./environments/local.env -f ./docker-compose-local.yaml up --build",
-    "start": "nest start",
+    "start": "nest start -e \"node --env-file ./environments/local.env\"",
     "start:dev": "nest start --watch -e \"node --env-file ./environments/local.env\"",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main --env-file ./environments/prod.env",
